--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -85,7 +85,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/login";
+                    window.location.href = "/views/login";
                 });
             });
         </script>
