--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -122,7 +122,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/login";
+                    window.location.href = "/views/login";
                 });
             });
         </script>
