회원가입화면 마크업 / CSS

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -154,7 +154,7 @@
                         <textarea
                             type="text"
                             maxlength="200"
-                            placeholder="자유롭게 소개글을 입력해주세요.(200자내)"
+                            placeholder="자유롭게 소개글을 입력해주세요.(200자이내)"
                             class="introduce"
                             id="introduce"
                         ></textarea>
