--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -45,16 +45,23 @@
             <button id="likepost-button">좋아요</button>
           </div>
           <div class="post">
-            <img
-              src="/static/images/profile.webp"
-              alt="profile image"
-              class="profile-thumbnail"
-            />
-            <div class="profile-user">
-              <p class="nickName">가나다짱짱</p>
-              <p class="userid">@gasadabb</p>
+            <div class="post-profile">
+              <img
+                src="/static/images/profile.webp"
+                alt="profile image"
+                class="post-profile-thumbnail"
+              />
+              <div class="profile-user">
+                <p class="nickName">가나다짱짱</p>
+                <p class="userid">@gasadabb</p>
+              </div>
             </div>
-            너무 배고프다 맨날 배고프다
+            <div class="post-content">
+              <p class="post-content-text">진짜 맨날 배고파요 어이없음 ㅎ</p>
+              <div class="post-image">
+                <img src="/static/images/post_food.webp" alt="post image" />
+              </div>
+            </div>
           </div>
         </div>
       </main>
