--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -26,7 +26,11 @@
                         <i class="fa-solid fa-gear"></i>
                     </a>
                     <div class="category-profile">
-                        <i class="fa-solid fa-user"></i>
+                        <img
+                        src="/static/images/profile.webp"
+                        alt="프로필"
+                        class="profile-image"
+                    />
                         <div class="category-profile-info">
                             <p class="category-nickName">닉네임</p>
                             <p class="category-id">@ggaong</p>
