[황다영] 작성시간 css 일부수정

--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -196,7 +196,7 @@
 
 .commentUser {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   flex-wrap: wrap;
   width: calc(100% - 60px);
   /* justify-content: space-between; */
