--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -51,7 +51,7 @@
                 alt="profile image"
                 class="post-profile-thumbnail"
               />
-              <div class="profile-user">
+              <div class="profile-user b">
                 <p class="nickName">가나다짱짱</p>
                 <p class="userid">@gasadabb</p>
               </div>
@@ -61,6 +61,44 @@
               <div class="post-image">
                 <img src="/static/images/post_food.webp" alt="post image" />
               </div>
+              <p class="post-time-text">2024년 9월 12일 오후 4시 31분</p>
+            </div>
+            <div class="icon-container">
+              <button
+                id="likeButton"
+                class="icon-button"
+                aria-label="like Button"
+              >
+                <i class="fa-regular fa-heart"></i>
+              </button>
+              <button
+                id="commentButton"
+                class="icon-button"
+                aria-label="comment Icon"
+              >
+                <i class="fa-regular fa-message"></i>
+              </button>
+              <button
+                id="favoriteButton"
+                class="icon-button"
+                aria-label="favorite Icon"
+              >
+                <i class="fa-regular fa-star"></i>
+              </button>
+              <button
+                id="reportButton"
+                class="icon-button"
+                aria-label="report Icon"
+              >
+                <i class="fa-solid fa-circle-exclamation"></i>
+              </button>
+              <button
+                id="shareButton"
+                class="icon-button"
+                aria-label="share Icon"
+              >
+                <i class="fa-regular fa-share-from-square"></i>
+              </button>
             </div>
           </div>
         </div>
