--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -55,6 +55,13 @@
                 <p class="nickName">가나다짱짱</p>
                 <p class="userid">@gasadabb</p>
               </div>
+              <button
+                id="listButton"
+                class="icon-button"
+                aria-label="list Icon"
+              >
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </button>
             </div>
             <div class="post-content">
               <p class="post-content-text">진짜 맨날 배고파요 어이없음 ㅎ</p>
