--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/styles/pages/users/login.css" />
   </head>
   <body>
-    <div class="wrap">
+    <div id="wrap">
       <img
         src="/static/images/nanum-logo.png"
         alt="logoimage"
