--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -62,6 +62,10 @@
               >
                 <i class="fa-solid fa-ellipsis-vertical"></i>
               </button>
+              <div class="category">
+                <i class="fa-solid fa-icons"></i>
+                <span>음식</span>
+              </div>
             </div>
             <div class="post-content">
               <p class="post-content-text">진짜 맨날 배고파요 어이없음 ㅎ</p>
