--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -20,17 +20,17 @@
           <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg">
           <div class="userInfo">
             <!-- 유저 닉네임 받아오기 -->
-            <span class="nickname">다영다영</span>
+             <!-- <%= post.author.profile.nickname %> -->
+            <a href="" class="nickName">다영다영</a>
             <!-- 팔로우 버튼 -->
             <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
             <!-- 유저 아이디 -->
-            <span class="userId">@dayoungh</span>
+            <a href="" class="userId">&#64;<%= post.author.accountId %></a>
           </div>
          
         </div>
         <!-- 카테고리 받아오기 -->
-        <!-- <div class="category">카테고리 <%= post.categoryId %></div> -->
-        <span class="category"><i class="fa-solid fa-icons"></i> 영화</span>
+        <span class="category"><i class="fa-solid fa-icons"></i> <%= post.category.title %></span>
       </div>
       <!-- 유저 정보 영역 끝 -->
 
@@ -92,16 +92,15 @@
             <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg">
             <div class="commentUser">
               <!-- 유저 닉네임 받아오기 -->
-              <%= post.author.profile.nickname %>
-              <span class="nickname">다영다영</span>
+              <!-- <%= post.author.profile.nickname %> -->
+              <a href="" class="nickName">다영다영</a>
               <!-- 유저 아이디 -->
-              <%= post.author.id %>
-              <span class="userId">@dayoungh</span>
+              <a href="" class="userId">&#64;<%= post.author.accountId %></a>
               
               <!-- 글 작성시간 -->
               <em class="createdAt" data-created-at="<%= post.createdAt.toISOString() %>"></em>
               <!-- 댓글 가져오기 -->
-              <p class="comment">우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>  
+              <p class="comment">우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>  
             </div>
             <div class="like">
               <i class="fa-solid fa-heart"></i> 
@@ -138,7 +137,7 @@
     <!-- 카테고리 & 글쓰기 버튼 플로팅 -->
     <div class="floatingMenu">
       <!-- 현재 카테고리 플로팅 메뉴 -->
-      <span>&#127916; 영화 나눔숲</span>
+      <span>&#127916; <%= post.category.title %></span>
       <!-- 글쓰기 버튼 -->
       <a href="/posts/write"><i class="fa-solid fa-pen"></i></a>
       <!-- <button type="button"><i class="fa-solid fa-pen"></i></button> -->
