--- a/public/styles/pages/users/userEdit.css
+++ b/public/styles/pages/users/userEdit.css
@@ -3,9 +3,7 @@
 
 body {
   background-color: var(--mono-000);
-  width: 428px;
-  /* height: 926px; */
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 #header {
@@ -36,7 +34,7 @@ body {
   height: 135px;
 }
 
-.edit-button {
+.profile-edit-button {
   background-color: var(--sub-color-1);
   color: var(--mono-000);
   border: 0;
@@ -48,6 +46,14 @@ body {
   position: absolute;
   bottom: 30px;
   right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-pen {
+  width: 17px;
+  height: 17px;
 }
 
 .profile-edit p {
@@ -76,14 +82,20 @@ body {
   gap: 10px;
 }
 
-#lable {
-  color: red;
+#bio {
+  resize: none;
+  padding: 10px;
+}
+
+#bio:focus {
+  outline: none;
 }
 
 #nickname {
   border: 1px solid var(--sub-color-3);
   border-radius: 10px;
   height: 50px;
+  padding-left: 10px;
 }
 
 #bio {
